// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders menu with content styles 1`] = `
<>
  <View
    collapsable={false}
    pointerEvents="box-none"
    style={
      {
        "flex": 1,
      }
    }
  >
    <View
      collapsable={false}
    >
      <View
        collapsable={false}
        style={
          {
            "backgroundColor": "transparent",
            "borderRadius": 20,
            "shadowColor": "rgba(0, 0, 0, 1)",
            "shadowOffset": {
              "height": 0,
              "width": 0,
            },
            "shadowOpacity": 0,
            "shadowRadius": 0,
          }
        }
        testID="button-container-outer-layer"
      >
        <View
          collapsable={false}
          style={
            {
              "backgroundColor": "transparent",
              "borderColor": "rgba(202, 196, 208, 1)",
              "borderRadius": 20,
              "borderStyle": "solid",
              "borderWidth": 1,
              "flex": undefined,
              "minWidth": 64,
              "shadowColor": "rgba(0, 0, 0, 1)",
              "shadowOffset": {
                "height": 0,
                "width": 0,
              },
              "shadowOpacity": 0,
              "shadowRadius": 0,
            }
          }
          testID="button-container"
        >
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": true,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            role="button"
            style={
              [
                {
                  "overflow": "hidden",
                },
                {
                  "borderRadius": 19,
                },
              ]
            }
            testID="button"
          >
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "justifyContent": "center",
                  },
                  {
                    "opacity": 1,
                  },
                  undefined,
                ]
              }
            >
              <Text
                numberOfLines={1}
                selectable={false}
                style={
                  [
                    {
                      "textAlign": "left",
                    },
                    {
                      "color": "rgba(29, 27, 32, 1)",
                      "writingDirection": "ltr",
                    },
                    [
                      {
                        "fontFamily": "System",
                        "fontSize": 14,
                        "fontWeight": "500",
                        "letterSpacing": 0.1,
                        "lineHeight": 20,
                      },
                      [
                        {
                          "marginHorizontal": 16,
                          "marginVertical": 9,
                          "textAlign": "center",
                        },
                        {
                          "marginHorizontal": 24,
                          "marginVertical": 10,
                        },
                        undefined,
                        false,
                        {
                          "color": "rgba(103, 80, 164, 1)",
                          "fontFamily": "System",
                          "fontSize": 14,
                          "fontWeight": "500",
                          "letterSpacing": 0.1,
                          "lineHeight": 20,
                        },
                        undefined,
                      ],
                    ],
                  ]
                }
                testID="button-text"
              >
                Open menu
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
  <View
    collapsable={false}
    pointerEvents="box-none"
    style={
      {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <View
      accessibilityLabel="Close menu"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      pointerEvents="auto"
      role="button"
      style={
        {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
          "width": "100%",
        }
      }
    />
    <View
      aria-modal={true}
      collapsable={false}
      onAccessibilityEscape={[MockFunction]}
      pointerEvents="box-none"
      style={
        [
          {
            "position": "absolute",
          },
          {
            "left": 8,
            "top": 8,
          },
          undefined,
        ]
      }
      testID="menu-view"
    >
      <View
        collapsable={false}
        pointerEvents="box-none"
        style={
          {
            "transform": [
              {
                "translateX": -0,
              },
              {
                "translateY": -0,
              },
            ],
          }
        }
      >
        <View
          collapsable={false}
          style={
            {
              "backgroundColor": "rgba(243, 237, 247, 1)",
              "borderRadius": 16,
              "borderTopLeftRadius": 0,
              "borderTopRightRadius": 0,
              "opacity": 0,
              "shadowColor": "rgba(0, 0, 0, 1)",
              "shadowOffset": {
                "height": 1.66,
                "width": 0,
              },
              "shadowOpacity": 0.19,
              "shadowRadius": 2.36,
              "transform": [
                {
                  "scaleX": 0,
                },
                {
                  "scaleY": 0,
                },
              ],
            }
          }
          testID="menu-surface-outer-layer"
        >
          <View
            collapsable={false}
            pointerEvents="box-none"
            style={
              {
                "backgroundColor": "rgba(243, 237, 247, 1)",
                "borderRadius": 16,
                "borderTopLeftRadius": 0,
                "borderTopRightRadius": 0,
                "flex": undefined,
                "paddingVertical": 8,
                "shadowColor": "rgba(0, 0, 0, 1)",
                "shadowOffset": {
                  "height": 0,
                  "width": 0,
                },
                "shadowOpacity": 0.039,
                "shadowRadius": 0.75,
              }
            }
            testID="menu-surface"
          >
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": false,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              role="menuitem"
              style={
                [
                  false,
                  [
                    {
                      "justifyContent": "center",
                      "maxWidth": 280,
                      "minWidth": 112,
                      "overflow": "hidden",
                    },
                    {
                      "height": 48,
                      "maxWidth": 280,
                      "minHeight": 48,
                      "minWidth": 112,
                      "paddingHorizontal": 12,
                    },
                    {
                      "borderBottomLeftRadius": 0,
                      "borderBottomRightRadius": 0,
                      "borderTopLeftRadius": 12,
                      "borderTopRightRadius": 12,
                    },
                    null,
                    undefined,
                  ],
                ]
              }
              testID="menu-item"
            >
              <View
                style={
                  [
                    {
                      "alignItems": "center",
                      "alignSelf": "flex-start",
                      "flexDirection": "row",
                      "maxWidth": 256,
                    },
                    {
                      "opacity": 1,
                    },
                    undefined,
                  ]
                }
              >
                <View
                  pointerEvents="none"
                  style={
                    [
                      {
                        "flexGrow": 0,
                        "flexShrink": 1,
                        "justifyContent": "center",
                      },
                      {
                        "maxWidth": 268,
                      },
                      {
                        "marginLeft": 4,
                      },
                      undefined,
                    ]
                  }
                >
                  <Text
                    maxFontSizeMultiplier={1.5}
                    numberOfLines={1}
                    selectable={false}
                    style={
                      [
                        {
                          "textAlign": "left",
                        },
                        {
                          "color": "rgba(29, 27, 32, 1)",
                          "writingDirection": "ltr",
                        },
                        [
                          {
                            "fontFamily": "System",
                            "fontSize": 14,
                            "fontWeight": "500",
                            "letterSpacing": 0.1,
                            "lineHeight": 20,
                          },
                          [
                            {
                              "color": "rgba(29, 27, 32, 1)",
                              "fontFamily": "System",
                              "fontSize": 14,
                              "fontWeight": "500",
                              "letterSpacing": 0.1,
                              "lineHeight": 20,
                            },
                            undefined,
                          ],
                        ],
                      ]
                    }
                    testID="menu-item-title"
                  >
                    Undo
                  </Text>
                </View>
              </View>
            </View>
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": false,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              role="menuitem"
              style={
                [
                  false,
                  [
                    {
                      "justifyContent": "center",
                      "maxWidth": 280,
                      "minWidth": 112,
                      "overflow": "hidden",
                    },
                    {
                      "height": 48,
                      "maxWidth": 280,
                      "minHeight": 48,
                      "minWidth": 112,
                      "paddingHorizontal": 12,
                    },
                    {
                      "borderBottomLeftRadius": 12,
                      "borderBottomRightRadius": 12,
                      "borderTopLeftRadius": 0,
                      "borderTopRightRadius": 0,
                    },
                    null,
                    undefined,
                  ],
                ]
              }
              testID="menu-item"
            >
              <View
                style={
                  [
                    {
                      "alignItems": "center",
                      "alignSelf": "flex-start",
                      "flexDirection": "row",
                      "maxWidth": 256,
                    },
                    {
                      "opacity": 1,
                    },
                    undefined,
                  ]
                }
              >
                <View
                  pointerEvents="none"
                  style={
                    [
                      {
                        "flexGrow": 0,
                        "flexShrink": 1,
                        "justifyContent": "center",
                      },
                      {
                        "maxWidth": 268,
                      },
                      {
                        "marginLeft": 4,
                      },
                      undefined,
                    ]
                  }
                >
                  <Text
                    maxFontSizeMultiplier={1.5}
                    numberOfLines={1}
                    selectable={false}
                    style={
                      [
                        {
                          "textAlign": "left",
                        },
                        {
                          "color": "rgba(29, 27, 32, 1)",
                          "writingDirection": "ltr",
                        },
                        [
                          {
                            "fontFamily": "System",
                            "fontSize": 14,
                            "fontWeight": "500",
                            "letterSpacing": 0.1,
                            "lineHeight": 20,
                          },
                          [
                            {
                              "color": "rgba(29, 27, 32, 1)",
                              "fontFamily": "System",
                              "fontSize": 14,
                              "fontWeight": "500",
                              "letterSpacing": 0.1,
                              "lineHeight": 20,
                            },
                            undefined,
                          ],
                        ],
                      ]
                    }
                    testID="menu-item-title"
                  >
                    Redo
                  </Text>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</>
`;

exports[`renders not visible menu 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    collapsable={false}
  >
    <View
      collapsable={false}
      style={
        {
          "backgroundColor": "transparent",
          "borderRadius": 20,
          "shadowColor": "rgba(0, 0, 0, 1)",
          "shadowOffset": {
            "height": 0,
            "width": 0,
          },
          "shadowOpacity": 0,
          "shadowRadius": 0,
        }
      }
      testID="button-container-outer-layer"
    >
      <View
        collapsable={false}
        style={
          {
            "backgroundColor": "transparent",
            "borderColor": "rgba(202, 196, 208, 1)",
            "borderRadius": 20,
            "borderStyle": "solid",
            "borderWidth": 1,
            "flex": undefined,
            "minWidth": 64,
            "shadowColor": "rgba(0, 0, 0, 1)",
            "shadowOffset": {
              "height": 0,
              "width": 0,
            },
            "shadowOpacity": 0,
            "shadowRadius": 0,
          }
        }
        testID="button-container"
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": true,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          role="button"
          style={
            [
              {
                "overflow": "hidden",
              },
              {
                "borderRadius": 19,
              },
            ]
          }
          testID="button"
        >
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "justifyContent": "center",
                },
                {
                  "opacity": 1,
                },
                undefined,
              ]
            }
          >
            <Text
              numberOfLines={1}
              selectable={false}
              style={
                [
                  {
                    "textAlign": "left",
                  },
                  {
                    "color": "rgba(29, 27, 32, 1)",
                    "writingDirection": "ltr",
                  },
                  [
                    {
                      "fontFamily": "System",
                      "fontSize": 14,
                      "fontWeight": "500",
                      "letterSpacing": 0.1,
                      "lineHeight": 20,
                    },
                    [
                      {
                        "marginHorizontal": 16,
                        "marginVertical": 9,
                        "textAlign": "center",
                      },
                      {
                        "marginHorizontal": 24,
                        "marginVertical": 10,
                      },
                      undefined,
                      false,
                      {
                        "color": "rgba(103, 80, 164, 1)",
                        "fontFamily": "System",
                        "fontSize": 14,
                        "fontWeight": "500",
                        "letterSpacing": 0.1,
                        "lineHeight": 20,
                      },
                      undefined,
                    ],
                  ],
                ]
              }
              testID="button-text"
            >
              Open menu
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`renders visible menu 1`] = `
<>
  <View
    collapsable={false}
    pointerEvents="box-none"
    style={
      {
        "flex": 1,
      }
    }
  >
    <View
      collapsable={false}
    >
      <View
        collapsable={false}
        style={
          {
            "backgroundColor": "transparent",
            "borderRadius": 20,
            "shadowColor": "rgba(0, 0, 0, 1)",
            "shadowOffset": {
              "height": 0,
              "width": 0,
            },
            "shadowOpacity": 0,
            "shadowRadius": 0,
          }
        }
        testID="button-container-outer-layer"
      >
        <View
          collapsable={false}
          style={
            {
              "backgroundColor": "transparent",
              "borderColor": "rgba(202, 196, 208, 1)",
              "borderRadius": 20,
              "borderStyle": "solid",
              "borderWidth": 1,
              "flex": undefined,
              "minWidth": 64,
              "shadowColor": "rgba(0, 0, 0, 1)",
              "shadowOffset": {
                "height": 0,
                "width": 0,
              },
              "shadowOpacity": 0,
              "shadowRadius": 0,
            }
          }
          testID="button-container"
        >
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": true,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            role="button"
            style={
              [
                {
                  "overflow": "hidden",
                },
                {
                  "borderRadius": 19,
                },
              ]
            }
            testID="button"
          >
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "justifyContent": "center",
                  },
                  {
                    "opacity": 1,
                  },
                  undefined,
                ]
              }
            >
              <Text
                numberOfLines={1}
                selectable={false}
                style={
                  [
                    {
                      "textAlign": "left",
                    },
                    {
                      "color": "rgba(29, 27, 32, 1)",
                      "writingDirection": "ltr",
                    },
                    [
                      {
                        "fontFamily": "System",
                        "fontSize": 14,
                        "fontWeight": "500",
                        "letterSpacing": 0.1,
                        "lineHeight": 20,
                      },
                      [
                        {
                          "marginHorizontal": 16,
                          "marginVertical": 9,
                          "textAlign": "center",
                        },
                        {
                          "marginHorizontal": 24,
                          "marginVertical": 10,
                        },
                        undefined,
                        false,
                        {
                          "color": "rgba(103, 80, 164, 1)",
                          "fontFamily": "System",
                          "fontSize": 14,
                          "fontWeight": "500",
                          "letterSpacing": 0.1,
                          "lineHeight": 20,
                        },
                        undefined,
                      ],
                    ],
                  ]
                }
                testID="button-text"
              >
                Open menu
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
  <View
    collapsable={false}
    pointerEvents="box-none"
    style={
      {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <View
      accessibilityLabel="Close menu"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      pointerEvents="auto"
      role="button"
      style={
        {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
          "width": "100%",
        }
      }
    />
    <View
      aria-modal={true}
      collapsable={false}
      onAccessibilityEscape={[MockFunction]}
      pointerEvents="box-none"
      style={
        [
          {
            "position": "absolute",
          },
          {
            "left": 8,
            "top": 8,
          },
          undefined,
        ]
      }
      testID="menu-view"
    >
      <View
        collapsable={false}
        pointerEvents="box-none"
        style={
          {
            "transform": [
              {
                "translateX": -0,
              },
              {
                "translateY": -0,
              },
            ],
          }
        }
      >
        <View
          collapsable={false}
          style={
            {
              "backgroundColor": "rgba(243, 237, 247, 1)",
              "borderRadius": 16,
              "opacity": 0,
              "shadowColor": "rgba(0, 0, 0, 1)",
              "shadowOffset": {
                "height": 1.66,
                "width": 0,
              },
              "shadowOpacity": 0.19,
              "shadowRadius": 2.36,
              "transform": [
                {
                  "scaleX": 0,
                },
                {
                  "scaleY": 0,
                },
              ],
            }
          }
          testID="menu-surface-outer-layer"
        >
          <View
            collapsable={false}
            pointerEvents="box-none"
            style={
              {
                "backgroundColor": "rgba(243, 237, 247, 1)",
                "borderRadius": 16,
                "flex": undefined,
                "paddingVertical": 8,
                "shadowColor": "rgba(0, 0, 0, 1)",
                "shadowOffset": {
                  "height": 0,
                  "width": 0,
                },
                "shadowOpacity": 0.039,
                "shadowRadius": 0.75,
              }
            }
            testID="menu-surface"
          >
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": false,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              role="menuitem"
              style={
                [
                  false,
                  [
                    {
                      "justifyContent": "center",
                      "maxWidth": 280,
                      "minWidth": 112,
                      "overflow": "hidden",
                    },
                    {
                      "height": 48,
                      "maxWidth": 280,
                      "minHeight": 48,
                      "minWidth": 112,
                      "paddingHorizontal": 12,
                    },
                    {
                      "borderBottomLeftRadius": 0,
                      "borderBottomRightRadius": 0,
                      "borderTopLeftRadius": 12,
                      "borderTopRightRadius": 12,
                    },
                    null,
                    undefined,
                  ],
                ]
              }
              testID="menu-item"
            >
              <View
                style={
                  [
                    {
                      "alignItems": "center",
                      "alignSelf": "flex-start",
                      "flexDirection": "row",
                      "maxWidth": 256,
                    },
                    {
                      "opacity": 1,
                    },
                    undefined,
                  ]
                }
              >
                <View
                  pointerEvents="none"
                  style={
                    [
                      {
                        "flexGrow": 0,
                        "flexShrink": 1,
                        "justifyContent": "center",
                      },
                      {
                        "maxWidth": 268,
                      },
                      {
                        "marginLeft": 4,
                      },
                      undefined,
                    ]
                  }
                >
                  <Text
                    maxFontSizeMultiplier={1.5}
                    numberOfLines={1}
                    selectable={false}
                    style={
                      [
                        {
                          "textAlign": "left",
                        },
                        {
                          "color": "rgba(29, 27, 32, 1)",
                          "writingDirection": "ltr",
                        },
                        [
                          {
                            "fontFamily": "System",
                            "fontSize": 14,
                            "fontWeight": "500",
                            "letterSpacing": 0.1,
                            "lineHeight": 20,
                          },
                          [
                            {
                              "color": "rgba(29, 27, 32, 1)",
                              "fontFamily": "System",
                              "fontSize": 14,
                              "fontWeight": "500",
                              "letterSpacing": 0.1,
                              "lineHeight": 20,
                            },
                            undefined,
                          ],
                        ],
                      ]
                    }
                    testID="menu-item-title"
                  >
                    Undo
                  </Text>
                </View>
              </View>
            </View>
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": false,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              role="menuitem"
              style={
                [
                  false,
                  [
                    {
                      "justifyContent": "center",
                      "maxWidth": 280,
                      "minWidth": 112,
                      "overflow": "hidden",
                    },
                    {
                      "height": 48,
                      "maxWidth": 280,
                      "minHeight": 48,
                      "minWidth": 112,
                      "paddingHorizontal": 12,
                    },
                    {
                      "borderBottomLeftRadius": 12,
                      "borderBottomRightRadius": 12,
                      "borderTopLeftRadius": 0,
                      "borderTopRightRadius": 0,
                    },
                    null,
                    undefined,
                  ],
                ]
              }
              testID="menu-item"
            >
              <View
                style={
                  [
                    {
                      "alignItems": "center",
                      "alignSelf": "flex-start",
                      "flexDirection": "row",
                      "maxWidth": 256,
                    },
                    {
                      "opacity": 1,
                    },
                    undefined,
                  ]
                }
              >
                <View
                  pointerEvents="none"
                  style={
                    [
                      {
                        "flexGrow": 0,
                        "flexShrink": 1,
                        "justifyContent": "center",
                      },
                      {
                        "maxWidth": 268,
                      },
                      {
                        "marginLeft": 4,
                      },
                      undefined,
                    ]
                  }
                >
                  <Text
                    maxFontSizeMultiplier={1.5}
                    numberOfLines={1}
                    selectable={false}
                    style={
                      [
                        {
                          "textAlign": "left",
                        },
                        {
                          "color": "rgba(29, 27, 32, 1)",
                          "writingDirection": "ltr",
                        },
                        [
                          {
                            "fontFamily": "System",
                            "fontSize": 14,
                            "fontWeight": "500",
                            "letterSpacing": 0.1,
                            "lineHeight": 20,
                          },
                          [
                            {
                              "color": "rgba(29, 27, 32, 1)",
                              "fontFamily": "System",
                              "fontSize": 14,
                              "fontWeight": "500",
                              "letterSpacing": 0.1,
                              "lineHeight": 20,
                            },
                            undefined,
                          ],
                        ],
                      ]
                    }
                    testID="menu-item-title"
                  >
                    Redo
                  </Text>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</>
`;
